Popular Categories and Fresh Products structures complete

--- a/index.html
+++ b/index.html
@@ -85,6 +85,155 @@
             </div>
         </section>
 
+        <section>
+            <div class="container text-center">
+                <p>Popular Categories</p>
+                <p>Add Popular Categories to weekly line up</p>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p>Malta Slices</p>
+                        <p>17 Products</p>
+                        <button>Shop Now</button>
+                    </div>
+                    <div class="col-md-4">
+                        <p>Mixed Food</p>
+                        <p>17 Products</p>
+                        <button>Shop Now</button>
+                    </div>
+                    <div class="col-md-4">
+                        <p>Orange Juice</p>
+                        <p>17 Products</p>
+                        <button>Shop Now</button>
+                    </div>
+                    <div class="col-md-4">
+                        <p>Special Apple</p>
+                        <p>17 Products</p>
+                        <button>Shop Now</button>
+                    </div>
+                    <div class="col-md-4">
+                        <p>Vegetables</p>
+                        <p>17 Products</p>
+                        <button>Shop Now</button>
+                    </div>
+                    <div class="col-md-4">
+                        <p>Strawburry</p>
+                        <p>17 Products</p>
+                        <button>Shop Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container text-center">
+                <p>Fresh Products</p>
+                <p>We provide fresh and health food service</p>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="" alt="">
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                        <p class="d-flex justify-content-center">£11.05</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="" alt="">
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                        <p class="d-flex justify-content-center">£20.50</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="" alt="">
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                        <p class="d-flex justify-content-center">£40.30</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="" alt="">
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                        <p class="d-flex justify-content-center">£15.60</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="" alt="">
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                        <p class="d-flex justify-content-center">£25.90</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="" alt="">
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                        <p class="d-flex justify-content-center">£35.30</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="" alt="">
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                        <p class="d-flex justify-content-center">£12.80</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="" alt="">
+                        <div class="d-flex justify-content-center">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                        <p class="d-flex justify-content-center">£90.00</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 
