MainView part complete here

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
+
     <!-- Css... -->
     <!-- Custom css(Stylesheet) -->
     <link rel="stylesheet" href="./Css/style.css">
@@ -57,9 +60,10 @@
         <!-- Main View starts here.. -->
         <section id="MainView">
             <div class="container text-center">
-                <p>Natural Health</p>
-                <p>Organic Food</p>
-                <p>The UK’s largest fully certified organic supermarket, Organic food delivery across the UK and Europe.</p>
+                <p id="MainView--Title">Natural Health</p>
+                <p id="MainView--Main">Organic Food</p>
+                <p id="MainView--Description">The UK’s largest fully certified organic <br> supermarket, Organic food delivery</p>
+                <button id="MainView--Button">Shop Now</button>
             </div>
         </section>
         <!-- Main View ends here... -->
