Advantages part complete

--- a/index.html
+++ b/index.html
@@ -68,33 +68,38 @@
         </section>
         <!-- Main View ends here... -->
 
-        <section>
+        <!-- Advantag starts here... -->
+        <section style="background-color: #338814;">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <p class="text-center">Receive your Order</p>
-                        <p class="text-center">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry mozzarella mozzarella</p>
+                        <img src="/Images/Hand.png" alt="" class="Advantages--IMG d-flex justify-content-center">
+                        <p class="text-center Advantages--Title">Receive your Order</p>
+                        <p class="text-center Advantages--Description ">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry a</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <p class="text-center">Free Returns</p>
-                        <p class="text-center">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry mozzarella mozzarella</p>
+                        <img src="/Images/Money.png" alt="" class="Advantages--IMG d-flex justify-content-center">
+                        <p class="text-center Advantages--Title">Free Returns</p>
+                        <p class="text-center Advantages--Description">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry a</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <p class="text-center">100% Organic Food</p>
-                        <p class="text-center">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry mozzarella mozzarella</p>
+                        <img src="/Images/Tree.png" alt="" class="Advantages--IMG d-flex justify-content-center">
+                        <p class="text-center Advantages--Title">100% Organic Food</p>
+                        <p class="text-center Advantages--Description">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry a</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <p class="text-center">Enjoy!</p>
-                        <p class="text-center">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry mozzarella mozzarella</p>
+                        <img src="/Images/Cap.png" alt="" class="Advantages--IMG d-flex justify-content-center">
+                        <p class="text-center Advantages--Title">Enjoy!</p>
+                        <p class="text-center Advantages--Description">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry a</p>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- Advantag ends here... -->
+
+
+        <!-- Categories starts here... -->
         <section>
             <div class="container text-center">
                 <p>Popular Categories</p>
