--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
     <!-- Css... -->
     <!-- Custom css(Stylesheet) -->
@@ -95,51 +95,64 @@
                 </div>
             </div>
         </section>
-
         <!-- Advantag ends here... -->
 
 
         <!-- Categories starts here... -->
         <section>
-            <div class="container text-center">
-                <p>Popular Categories</p>
-                <p>Add Popular Categories to weekly line up</p>
+            <div class="container text-center mt-5">
+                <p id="Categories-Title">Popular Categories</p>
+                <p id="Categories-Description">Add Popular Categories to weekly line up</p>
             </div>
             <div class="container">
-                <div class="row">
+                <div class="row g-3">
                     <div class="col-md-4">
-                        <p>Malta Slices</p>
-                        <p>17 Products</p>
-                        <button>Shop Now</button>
+                        <div class=" Categories--Card1">
+                            <p class="Categories--CardTitle">Malta Slices</p>
+                            <p class="Categories--CardQuantity">17 Products</p>
+                            <button class="Categories--CardButton">Shop Now</button>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <p>Mixed Food</p>
-                        <p>17 Products</p>
-                        <button>Shop Now</button>
+                        <div class="Categories--Card2">
+                            <p class="Categories--CardTitle">Mixed Food</p>
+                            <p class="Categories--CardQuantity">17 Products</p>
+                            <button class="Categories--CardButton">Shop Now</button>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <p>Orange Juice</p>
-                        <p>17 Products</p>
-                        <button>Shop Now</button>
+                        <div class="Categories--Card3">
+                            <p class="Categories--CardTitle">Orange Juice</p>
+                            <p class="Categories--CardQuantity">17 Products</p>
+                            <button class="Categories--CardButton">Shop Now</button>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <p>Special Apple</p>
-                        <p>17 Products</p>
-                        <button>Shop Now</button>
+                        <div class="Categories--Card4">
+                            <p class="Categories--CardTitle">Special Apple</p>
+                            <p class="Categories--CardQuantity">17 Products</p>
+                            <button class="Categories--CardButton">Shop Now</button>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <p>Vegetables</p>
-                        <p>17 Products</p>
-                        <button>Shop Now</button>
+                        <div class="Categories--Card5">
+                            <p class="Categories--CardTitle">Vegetables</p>
+                            <p class="Categories--CardQuantity">17 Products</p>
+                            <button class="Categories--CardButton">Shop Now</button>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <p>Strawburry</p>
-                        <p>17 Products</p>
-                        <button>Shop Now</button>
+                        <div class="Categories--Card6">
+                            <p class="Categories--CardTitle">Strawburry</p>
+                            <p class="Categories--CardQuantity">17 Products</p>
+                            <button class="Categories--CardButton">Shop Now</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Categories ends here... -->
+
 
         <section>
             <div class="container text-center">
