--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     <!-- Navbar starts here... -->
     <nav class="container mt-2 mb-2">
         <div class="row">
+            <!-- Category -->
             <div class="col-md-1 d-flex justify-content-center">
                 <i class="fas fa-bars NavIcon1"></i>&nbsp;
                 <p class="Nav--Category"> Category </p>&nbsp;
                 <i class="fas fa-angle-down NavIcon2"></i>
             </div>
+            <!-- Category -->
             <div class="col-md-1 d-flex justify-content-center Navigations">
                 <p class="Nav--Navigations">NEW ARRIVAL</p>
             </div>
@@ -42,9 +44,11 @@
             <div class="col-md-1 d-flex justify-content-center">
                 <p class="Nav--Navigations">FLASH SALES</p>
             </div>
+            <!-- Logo -->
             <div class="col-md-4 d-flex justify-content-center">
                 <p class="Nav--Store">STORE <span class="Nav--X">X</span></p>
             </div>
+            <!-- Logo -->
             <div class="col-md-1 ms-auto d-flex justify-content-center Nav--SearchIcon">
                 <i class="fas fa-search"></i>
             </div>
@@ -100,10 +104,14 @@
 
         <!-- Categories starts here... -->
         <section>
+            <!-- Headings -->
             <div class="container text-center mt-5">
-                <p id="Categories-Title">Popular Categories</p>
-                <p id="Categories-Description">Add Popular Categories to weekly line up</p>
+                <p class="Titles">Popular Categories</p>
+                <p class="Descriptions">Add Popular Categories to weekly line up</p>
             </div>
+            <!-- Headings -->
+
+            <!-- cards -->
             <div class="container">
                 <div class="row g-3">
                     <div class="col-md-4">
@@ -150,123 +158,166 @@
                     </div>
                 </div>
             </div>
+            <!-- Cards -->
         </section>
         <!-- Categories ends here... -->
 
-
+        <!-- Products starts here... -->
         <section>
-            <div class="container text-center">
-                <p>Fresh Products</p>
-                <p>We provide fresh and health food service</p>
+            <!-- Headings -->
+            <div class="container text-center mt-5 mb-5">
+                <p class="Titles">Fresh Products</p>
+                <p class="Descriptions">We provide fresh and health food service</p>
             </div>
+            <!-- Headings -->
 
+            <!-- Cards -->
             <div class="container">
-                <div class="row">
+                <div class="row g-3">
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <div class="d-flex justify-content-center">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                        <div class="border">
+                            <!-- Images -->
+                            <img src="/Images/Orange1.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <!-- Ratings -->
+                            <div class="d-flex justify-content-center Products--Rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <!-- Title and Price -->
+                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center mb-4">£11.05</p>
                         </div>
-                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
-                        <p class="d-flex justify-content-center">£11.05</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <div class="d-flex justify-content-center">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                        <div class="border">
+                            <!-- Images -->
+                            <img src="/Images/Straberry.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <!-- Ratings -->
+                            <div class="d-flex justify-content-center Products--Rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <!-- Title and Price -->
+                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center mb-4">£20.50</p>
                         </div>
-                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
-                        <p class="d-flex justify-content-center">£20.50</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <div class="d-flex justify-content-center">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                        <div class="border">
+                            <!-- Images -->
+                            <img src="/Images/Orange2.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <!-- Ratings -->
+                            <div class="d-flex justify-content-center Products--Rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <!-- Title and Price -->
+                            <p class="d-flex justify-content-center Product--Title">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center mb-4">£40.30</p>
                         </div>
-                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
-                        <p class="d-flex justify-content-center">£40.30</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <div class="d-flex justify-content-center">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                        <div class="border">
+                            <!-- Images -->
+                            <img src="/Images/Graps.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <!-- Ratings -->
+                            <div class="d-flex justify-content-center Products--Rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <!-- Title and Price -->
+                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center mb-4">£15.60</p>
                         </div>
-                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
-                        <p class="d-flex justify-content-center">£15.60</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <div class="d-flex justify-content-center">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                        <div class="border">
+                            <!-- Images -->
+                            <img src="/Images/Brocoli.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <!-- Ratings -->
+                            <div class="d-flex justify-content-center Products--Rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <!-- Title and Price -->
+                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center mb-4">£25.90</p>
                         </div>
-                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
-                        <p class="d-flex justify-content-center">£25.90</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <div class="d-flex justify-content-center">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                        <div class="border">
+                            <!-- Images -->
+                            <img src="/Images/Bananna.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <!-- Ratings -->
+                            <div class="d-flex justify-content-center Products--Rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <!-- Title and Price -->
+                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center mb-4">£35.30</p>
                         </div>
-                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
-                        <p class="d-flex justify-content-center">£35.30</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <div class="d-flex justify-content-center">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                        <div class="border">
+                            <!-- Images -->
+                            <img src="/Images/lattuce.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <!-- Ratings -->
+                            <div class="d-flex justify-content-center Products--Rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <!-- Title and Price -->
+                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center mb-4">£12.80</p>
                         </div>
-                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
-                        <p class="d-flex justify-content-center">£12.80</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="" alt="">
-                        <div class="d-flex justify-content-center">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                        <div class="border">
+                            <!-- Images -->
+                            <img src="/Images/lamon.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <!-- Ratings -->
+                            <div class="d-flex justify-content-center Products--Rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <!-- Title and Price -->
+                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center mb-4">£90.00</p>
                         </div>
-                        <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
-                        <p class="d-flex justify-content-center">£90.00</p>
                     </div>
                 </div>
             </div>
+            <!-- Cards -->
         </section>
-
+        <!-- Products end here... -->
     </main>
 
-
-
-
+    <!-- Fontawesome JavaScript  -->
     <script src="./all.js"></script>
     <!-- Bootstrap Bundle JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
