--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <div class="col-md-3">
                         <div class="border">
                             <!-- Images -->
-                            <img src="/Images/lattuce.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <img src="Images/lattuce.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
                             <!-- Ratings -->
                             <div class="d-flex justify-content-center Products--Rating">
                                 <i class="fas fa-star"></i>
